error
  File "autoracer2.py", line 1071
    def draw_lane_overlay_2023(self, original_image, bev_image, lane_mask, left_line, right_line, lane_center):
                                                                                                              ^
IndentationError: unindent does not match any outer indentation level
